crates/normalize-typegen/tests/snapshots/codegen__valibot_user.snap
---
source: crates/moss-typegen/tests/codegen.rs
assertion_line: 101
expression: output
---
// Auto-generated by moss-typegen
import * as v from "valibot";

/** Physical address */
export const AddressSchema = v.object({
  city: v.string(),
  country: v.string(),
  postalCode: v.optional(v.string()),
  street: v.string(),
});

/** User account status */
export const StatusSchema = v.picklist(["pending", "active", "suspended", "deleted"]);

/** A user account */
export const UserSchema = v.object({
  address: v.optional(AddressSchema),
  age: v.optional(v.pipe(v.number(), v.integer())),
  /** Email address */
  email: v.string(),
  /** Unique identifier */
  id: v.string(),
  metadata: v.optional(v.record(v.string(), v.string())),
  name: v.optional(v.string()),
  status: StatusSchema,
  tags: v.optional(v.array(v.string())),
});
